--- a/index.html
+++ b/index.html
@@ -2,27 +2,24 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <head>
-        <title>Hank Quinlan, Horrible Cop</title>
+        <title>BITCOIN HELP</title>
     </head>
     <body>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/cv">CV</a></li>
-                <li><a href="/blog">Blog</a></li>
             </ul>
         </nav>
         <div class="container">
             <div class="blurb">
-                <h1>Hi there, I'm Hank Quinlan!</h1>
-                <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+                <h1>Hi there, Very Glad To See You!</h1>
+                <p>Here is a poor guy need your help for bitcoins:) <br>
+                    If you by chance have bitcoins, I would be very grateful if you can donate some bitcoins to me.<br>
+                God will bless you more happy and more rich! Thanks a lot!</p>
             </div><!-- /.blurb -->
         </div><!-- /.container -->
         <footer>
             <ul>
-                <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-                <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+                <li>Here is the bitcoin address: 1P5Lo44Gv5awAv7yuBeySK8HLVZMe7T5NJ</li>
             </ul>
         </footer>
     </body>
