--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </div><!-- /.container -->
         <footer>
             <ul>
-                <li>Here is the bitcoin address: 1P5Lo44Gv5awAv7yuBeySK8HLVZMe7T5NJ</li>
+                <li>Here is the <b>Bitcoin</b> address: <b>1P5Lo44Gv5awAv7yuBeySK8HLVZMe7T5NJ</b></li>
+                <li>Here is the <b>Ether</b> address: <b>0xC25b21424981a3ef2963866cca7aBC6201bb4f2C</b></li>
             </ul>
         </footer>
     </body>
