--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         <div class="container">
             <div class="blurb">
                 <h1>Hi there, Very Glad To See You!</h1>
-                <p>Here is a poor guy need your help for bitcoins:) <br>
-                    If you by chance have bitcoins, I would be very grateful if you can donate some bitcoins to me.<br>
+                <p>If you by chance have bitcoins, I would be very grateful if you can donate some bitcoins to me.<br>
                 God will bless you more happy and more rich! Thanks a lot!</p>
             </div><!-- /.blurb -->
         </div><!-- /.container -->
         <footer>
             <ul>
-                <li>Here is the <b>Bitcoin</b> address: <b>1P5Lo44Gv5awAv7yuBeySK8HLVZMe7T5NJ</b></li>
+                <li>Here is the <b>Bitcoin</b> address: <b>1P5Lo44Gv5awAv7yuBeySK8HLVZMe7T5NJ</b><br></li>
                 <li>Here is the <b>Ether</b> address: <b>0xC25b21424981a3ef2963866cca7aBC6201bb4f2C</b></li>
             </ul>
         </footer>
