--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html>
 <html>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <head>
         <title>私募代币信息查询</title>
     </head>
-    <body>
+    <body style="background-color:#E7F3FF;text-align:center;">
         <nav>
             <ul>
             </ul>
         </nav>
         <div class="container">
             <div class="blurb">
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
                 <!--<h1>Hi there, Very Glad To See You!</h1>
                 <p>If you by chance have bitcoins, I would be very grateful if you can donate some bitcoins to me.<br>
                 God will bless you more happy and more rich! Thanks a lot!</p>-->
-            </div><!-- /.blurb -->
-        </div><!-- /.container -->
-        <footer>
-            <ul>
-				<table border="1">
+				<table border="0" style="margin:auto">
 				<tr>
 				<td>代币名称</td>
 				<td>发行数目(亿枚)</td>
@@ -38,8 +40,13 @@
 				<td>2018/06/18</td>
 				</tr>
 				</table>
-                <li><b>Bitcoin</b> donate address: <b>1P5Lo44Gv5awAv7yuBeySK8HLVZMe7T5NJ</b><br></li>
-                <li><b>Ether</b> donate address: <b>0x33e91AdDf30819f42d1b4ea0249F75eFe02d25A7</b></li>
+                <li><b>Bitcoin</b> donate address:1P5Lo44Gv5awAv7yuBeySK8HLVZMe7T5NJ<br></li>
+                <li><b>Ether</b> donate address:0x33e91AdDf30819f42d1b4ea0249F75eFe02d25A7</li>
+            </div><!-- /.blurb -->
+        </div><!-- /.container -->
+        <footer>
+            <ul>
+
             </ul>
         </footer>
     </body>
