--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     <div class="logo"><a href="https://www.fcoin.com/"></a></div>
     <div class="menu-box">
         <a href="http://www.bitcoinbet.top/" class="">预售币汇总</a>
-        <a href="https://www.fcoin.com/aboutft.html" class="">交易所汇总</a>
-        <a href="https://www.fcoin.com/ft.pdf?v=1.3" class="" target="_blank">白皮书</a>
+        <a href="http://www.bitcoinbet.top/" class="">交易所汇总</a>
+        <a href="http://www.bitcoinbet.top/" class="" target="_blank">白皮书</a>
         <a href="https://www.fcoin.com/transparent.html"></a>    </div>
 
     <!-- <div class='getNav'><i class="fa fa-navicon" aria-hidden="true"></i></div> -->
@@ -194,8 +194,8 @@
 
         </div>
         <div class="user-box">
-                        <a href="https://exchange.fcoin.com/u/login" class="login">登录</a>
-            <a href="https://exchange.fcoin.com/u/register" class="register">注册</a>      </div>
+                        <a href="http://www.bitcoinbet.top/" class="login">登录</a>
+            <a href="http://www.bitcoinbet.top/" class="register">注册</a>      </div>
     </div>
     <div class="h5-menu">
         <div class="username">
