change target link from www.bitcoinbet.top to www.newcoininfo.com

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
     <header class="header">
     <div class="logo"><a href="https://www.fcoin.com/"></a></div>
     <div class="menu-box">
-        <a href="http://www.bitcoinbet.top/" class="">预售币汇总</a>
-        <a href="http://www.bitcoinbet.top/" class="">交易所汇总</a>
-        <a href="http://www.bitcoinbet.top/" class="" target="_blank">白皮书</a>
+        <a href="http://www.newcoininfo.com/" class="">预售币汇总</a>
+        <a href="http://www.newcoininfo.com/" class="">交易所汇总</a>
+        <a href="http://www.newcoininfo.com/" class="" target="_blank">白皮书</a>
         <a href="https://www.fcoin.com/transparent.html"></a>    </div>
 
     <!-- <div class='getNav'><i class="fa fa-navicon" aria-hidden="true"></i></div> -->
@@ -194,8 +194,8 @@
 
         </div>
         <div class="user-box">
-                        <a href="http://www.bitcoinbet.top/" class="login">登录</a>
-            <a href="http://www.bitcoinbet.top/" class="register">注册</a>      </div>
+                        <a href="http://www.newcoininfo.com/" class="login">登录</a>
+            <a href="http://www.newcoininfo.com/" class="register">注册</a>      </div>
     </div>
     <div class="h5-menu">
         <div class="username">
@@ -257,21 +257,21 @@
     <div class="container">
       <dl class="item-1">
             <dt>服务</dt>
-          <dd><a href="http://www.bitcoinbet.top/">交易中心</a></dd>
-            <dd><a href="http://www.bitcoinbet.top/" target="_blank">支持</a></dd>
-            <dd><a href="http://www.bitcoinbet.top/" target="_blank">提交请求</a></dd>
+          <dd><a href="http://www.newcoininfo.com/">交易中心</a></dd>
+            <dd><a href="http://www.newcoininfo.com/" target="_blank">支持</a></dd>
+            <dd><a href="http://www.newcoininfo.com/" target="_blank">提交请求</a></dd>
         </dl>
         <dl class="item-2">
             <dt>条款说明</dt>
-            <dd><a href="http://www.bitcoinbet.top/">隐私政策</a></dd>
-            <dd><a href="http://www.bitcoinbet.top/">用户协议</a></dd>
-                        <dd><a href="http://www.bitcoinbet.top/" target="_blank">手续费</a></dd>
+            <dd><a href="http://www.newcoininfo.com/">隐私政策</a></dd>
+            <dd><a href="http://www.newcoininfo.com/">用户协议</a></dd>
+                        <dd><a href="http://www.newcoininfo.com/" target="_blank">手续费</a></dd>
       </dl>
         <dl class="item-3">
             <dt>关于我们</dt>
-            <dd><a href="http://www.bitcoinbet.top/">客户支持</a></dd>
-            <dd><a href="http://www.bitcoinbet.top/" target="_blank">联系我们</a></dd>
-            <dd><a href="http://www.bitcoinbet.top/">申请上币</a></dd>
+            <dd><a href="http://www.newcoininfo.com/">客户支持</a></dd>
+            <dd><a href="http://www.newcoininfo.com/" target="_blank">联系我们</a></dd>
+            <dd><a href="http://www.newcoininfo.com/">申请上币</a></dd>
         </dl>
   </div>
 </div>
